// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MarkedSentence /> should match baseline snapshot 1`] = `
<p
  class="sc-bZQynM bTjbra sc-bxivhb bnhDjc"
  lang="ja"
>
  <a
    class="sc-bwzfXH dcrzcy"
    href="http://jisho.org/search/その言葉の漢字は難しい"
    rel="external noopener noreferrer"
    target="_blank"
    title="Deconstruct sentence at Jisho.org"
  >
    <span />
    <mark
      class="sc-gzVnrw cEcPpo sc-ifAKCX ewknst"
      color="inherit"
    />
    <span>
      その言葉の漢字は難しい
    </span>
  </a>
</p>
`;

exports[`<MarkedSentence /> should match character snapshot 1`] = `
<p
  class="sc-bZQynM bTjbra sc-bxivhb bnhDjc"
  lang="ja"
>
  <a
    class="sc-bwzfXH dcrzcy"
    href="http://jisho.org/search/その言葉の漢字は難しい"
    rel="external noopener noreferrer"
    target="_blank"
    title="Deconstruct sentence at Jisho.org"
  >
    <span>
      その言葉の
    </span>
    <mark
      class="sc-gzVnrw cEcPpo sc-ifAKCX ewknst"
      color="inherit"
    >
      漢字
    </mark>
    <span>
      は難しい
    </span>
  </a>
</p>
`;

exports[`<MarkedSentence /> should match kana snapshot 1`] = `
<p
  class="sc-bZQynM bTjbra sc-bxivhb bnhDjc"
  lang="ja"
>
  <a
    class="sc-bwzfXH dcrzcy"
    href="http://jisho.org/search/その言葉の漢字は難しい"
    rel="external noopener noreferrer"
    target="_blank"
    title="Deconstruct sentence at Jisho.org"
  >
    <span />
    <mark
      class="sc-gzVnrw cEcPpo sc-ifAKCX ewknst"
      color="inherit"
    >
      その
    </mark>
    <span>
      言葉の漢字は難しい
    </span>
  </a>
</p>
`;
